crates/ruff_python_parser/tests/snapshots/invalid_syntax@decorator_await_expression_py38.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/decorator_await_expression_py38.py
---
## AST

```
Module(
    ModModule {
        range: 0..96,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    range: 45..95,
                    is_async: true,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 55..58,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 58..60,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        FunctionDef(
                            StmtFunctionDef {
                                range: 66..95,
                                is_async: false,
                                decorator_list: [
                                    Decorator {
                                        range: 66..76,
                                        expression: Await(
                                            ExprAwait {
                                                range: 67..76,
                                                value: Name(
                                                    ExprName {
                                                        range: 73..76,
                                                        id: Name("bar"),
                                                        ctx: Load,
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                ],
                                name: Identifier {
                                    id: Name("baz"),
                                    range: 85..88,
                                },
                                type_params: None,
                                parameters: Parameters {
                                    range: 88..90,
                                    posonlyargs: [],
                                    args: [],
                                    vararg: None,
                                    kwonlyargs: [],
                                    kwarg: None,
                                },
                                returns: None,
                                body: [
                                    Expr(
                                        StmtExpr {
                                            range: 92..95,
                                            value: EllipsisLiteral(
                                                ExprEllipsisLiteral {
                                                    range: 92..95,
                                                },
                                            ),
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Unsupported Syntax Errors

  |
1 | # parse_options: { "target-version": "3.8" }
2 | async def foo():
3 |     @await bar
  |      ^^^^^^^^^ Syntax Error: Cannot use `await` expression outside function call arguments in a decorator on Python 3.8 (syntax was added in Python 3.9)
4 |     def baz(): ...
  |
